one past until LA

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -52,8 +52,6 @@ demographic evolution without geographic harmonization, effectively removing one
 of the most challenging problems in longitudinal demographic analysis. We also
 include illustrative scenarios and our prototype is available at
 \url{http://uoft.me/piccard}, including more than fourty regions in the US and
-Canada. 
+Canada. The source code is publicly available at
+\url{https://github.com/fabioasdias/piccard}.
 
-% We adopt census data as familiar operational
-% context, but the proposed methodology is suitable for most region based
-% measurements.
