--- a/paper/rev.bib
+++ b/paper/rev.bib
@@ -21,6 +21,24 @@
   publisher={University of Toronto Press}
 }
 
+
+
+
+
+
+
+@article{Hwang2014,
+author = {Jackelyn Hwang and Robert J. Sampson},
+title ={Divergent Pathways of Gentrification: Racial Inequality and the Social Order of Renewal in Chicago Neighborhoods},
+journal = {American Sociological Review},
+volume = {79},
+number = {4},
+pages = {726-751},
+year = {2014},
+doi = {10.1177/0003122414535774}
+}
+
+
 @article{moller2009changing,
   title={Changing patterns of income inequality in US counties, 1970--2000},
   author={Moller, Stephanie and Alderson, Arthur S and Nielsen, Francois},
